--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,12 +4,12 @@
     <title>Login</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
-<body>
+<body class="login-background">
 <div class="login-container">
-    <h2>HI! GREAT TO SEE YOU.<h3>
+    <h2>HI! GREAT TO SEE YOU.<h2>
         <h3>LOGIN HERE!</h3>
     <form method="post" th:action="@{/login}">
-        <label>Name:</label>
+        <label>Username:</label>
         <input type="text" name="username" required>
 
         <label>Password:</label>
@@ -17,6 +17,7 @@
 
         <button type="submit">Login</button>
     </form>
+
     <p class="error" th:if="${error}" th:text="${error}"></p>
         <div th:if="${param.logout}">
             <p style="color: green;">You have been logged out successfully.</p>
