--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -37,7 +37,7 @@
 
   <h3>💼 Professional Overview</h3>
   <p>
-    I’m a passionate <strong>Automation Tester</strong> with practical experience in:
+    I’m an experienced <strong>Automation Tester</strong> with practical experience in:
     <br>
     <em>(Full skill list is available under the "Skills" menu)</em>
     <br>
